# camera-surveillance

./: index.html  pyproject.toml  start_all.sh
backend/: README.md  anchor.py  app.py  debug_import.py  main.py  pyproject.toml  requirements.txt  start.sh  test_audio_transcriber.py  test_modified_backend.py
backend/core/: frame_extractor.py  keyword_detector.py  result_reporter.py  video_processor.py
backend/core/model/: audio_transcriber.py  local_models.py  vehicle_recognizer.py
backend/demo/: bailianParaformer_file.py  bailianParaformer_stream.py  bailianQwen3vl.py  det_demo.py
backend/doc/: 外勤作业智能分析系统文档.docx
backend/src/backend/: result_reporter.py  video_processor.py  workspace.py
backend/src/backend/processor/: audio_transcriber.py  local_models.py  speech_processor.py
backend/src/camera_surveillance/: video_processor.py  workspace.py
backend/src/camera_surveillance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/camera_surveillance/processor/: __init__.py  audio_transcriber.py  local_models.py  speech_processor.py  vehicle_recognizer.py
backend/test/: test_audio_transcriber.py  test_backend.py  test_local_models.py  test_modified_backend.py  test_speech_processor.py
doc/: iflow命令
frontend/: README.md  demo.html  index.html  style.css
frontend/doc/: commands.md  iflow命令  前端页面架构.md
frontend/jssdk/: mcs8Client.js  sdkDemo.js  videoStreamHandler.js
