[project]
name = "camera-surveillance-backend"
version = "0.1.0"
description = "Backend for camera surveillance system"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "dashscope>=1.25.1",
    "eva-decord==0.6.1",
    "fastapi>=0.121.1",
    "numpy==1.26.4",
    "pandas==2.3.2",
    "pyaudio>=0.2.14",
    "torch==2.2.2",
    "tqdm==4.67.1",
    "ultralytics==8.3.203",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["camera_surveillance_backend*"]

[project.scripts]
start-backend = "main:main"
