[project]
name = "camera-surveillance-backend"
version = "0.1.0"
description = "Backend for camera surveillance system"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "opencv-python",
    "numpy",
    "pyaudio",
    "dashscope",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[project.scripts]
start-backend = "main:main"